--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "static-server": "^2.2.1",
     "tone": "^0.12.80",
     "tunajs": "^1.0.1",
-    "twit": "^2.2.10"
+    "twit": "^2.2.10",
+    "ws": "^5.2.0"
   }
 }
